定义开始按钮和结束按钮功能

--- a/JYUSB101/Analog Input.csproj
+++ b/JYUSB101/Analog Input.csproj
@@ -55,16 +55,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AnalogInputForm.cs">
+    <Compile Include="Analog Input.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AnalogInputForm.Designer.cs">
-      <DependentUpon>AnalogInputForm.cs</DependentUpon>
+    <Compile Include="Analog Input.Designer.cs">
+      <DependentUpon>Analog Input.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="AnalogInputForm.resx">
-      <DependentUpon>AnalogInputForm.cs</DependentUpon>
+    <EmbeddedResource Include="Analog Input.resx">
+      <DependentUpon>Analog Input.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
