创建Analog Input文件夹，新建多通道MutilChannels项目

--- a/JYUSB101/Analog Input/Analog Input.csproj
+++ b/JYUSB101/Analog Input/Analog Input.csproj
@@ -55,7 +55,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Analog Input.cs" />
+    <Compile Include="Analog Input.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Analog Input.Designer.cs">
       <DependentUpon>Analog Input.cs</DependentUpon>
     </Compile>
