--- a/JYUSB101/MutilChannels Analog Input/MutilChannels Analog Input.csproj
+++ b/JYUSB101/MutilChannels Analog Input/MutilChannels Analog Input.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B3C67546-328E-46FE-A356-014CCBBE6072}</ProjectGuid>
+    <ProjectGuid>{DE3630FC-A3A1-4EFB-B88C-D444C0EBB529}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>JYUSB101</RootNamespace>
-    <AssemblyName>JYUSB101</AssemblyName>
+    <RootNamespace>MutilChannels_Analog_Input</RootNamespace>
+    <AssemblyName>MutilChannels Analog Input</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -33,10 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="JYUSB101, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\SeeSharp\JYTEK\Hardware\DAQ\JYUSB101\Bin\JYUSB101.dll</HintPath>
-    </Reference>
     <Reference Include="SeeSharpTools.JY.GUI">
       <HintPath>C:\SeeSharp\JYTEK\SeeSharpTools\Bin\SeeSharpTools.JY.GUI.dll</HintPath>
     </Reference>
@@ -55,14 +51,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Analog Input.cs" />
-    <Compile Include="Analog Input.Designer.cs">
-      <DependentUpon>Analog Input.cs</DependentUpon>
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Analog Input.resx">
-      <DependentUpon>Analog Input.cs</DependentUpon>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
